1.升级了跨域支持配置，实现了支持options请求，实现了动态跨域支持。2.实现了普通用户登陆接口和验证，服务。

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -22,6 +22,9 @@ enablexsrf = false
 xsrfkey = 7b19002c51120ff55ca97dc7516cf330
 xsrfexpire = 3600
 
+# 当post请求解析json请求包时必须开启该设置，否则总报错误：unexpected end of JSON input
+copyrequestbody = true
+
 [dev]
 httpport = 8010
 
